// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GreaseReportDataGeneratorService prepare report errors and warnings data should return formatted data 1`] = `
Object {
  "messageItems": Array [
    Object {
      "items": Array [
        "",
        "Very high kappa values and corresponding friction losses occur at the present operating speed for the following lubricating greases:",
        "  · Arcanol LOAD1000",
        "  · Arcanol TEMP200",
        "",
      ],
      "title": "errors",
    },
    Object {
      "items": Array [
        "",
        "Relubrication should be carried out once a year.",
        "Arcanol Clean M, Arcanol MOTION 2, Arcanol MULTITOP, Arcanol MULTI2, Arcanol MULTI3, Arcanol LOAD150, Arcanol LOAD220, Arcanol LOAD400, Arcanol LOAD460, Arcanol TEMP90, Arcanol TEMP110, Arcanol TEMP120, Arcanol SPEED 2,6, Arcanol VIB3, Arcanol FOOD2",
        "",
        "Where a grease service life >3 years is required, this should be agreed in consultation with the lubricant manufacturer.",
        "Arcanol Clean M, Arcanol MOTION 2, Arcanol MULTITOP, Arcanol MULTI2, Arcanol MULTI3, Arcanol LOAD150, Arcanol LOAD220, Arcanol LOAD400, Arcanol LOAD460, Arcanol TEMP90, Arcanol TEMP110, Arcanol TEMP120, Arcanol SPEED 2,6, Arcanol VIB3, Arcanol FOOD2",
        "",
        "Calculation finished. The results for the permissible greases are in the result file.",
        "",
      ],
      "title": "warnings",
    },
    Object {
      "items": Array [
        "",
        "Calculation of the grease service life and the relubrication interval corresponds to the catalog method. The internal geometry and the internal load distribution are not taken into consideration in the calculation. For appropriate grease selection, the employees of the Schaeffler Group have access to the Grease Configurator. If the axis of rotation is vertical, the supply of lubricant to the contact must be checked. Please consult the experts in the Lubrication Technology department.",
        "",
        "A complete plausibility check of the loads is not implemented. Load conditions like minimal load, maximum permissible load as well as suitability of the load situation for the selected bearing are not checked.",
        "",
        "In the Grease App, fatigue life is not considered or calculated. Please check this separately.",
        "",
        "When calculating the amount of lubricant, only the volume of the bearing is taken into account, while the free space of the surrounding construction is not considered.",
        "",
        "The specified grease quantities are only guide values, which may be deviated from based on practical experience. In case of questions, please contact the Schaeffler engineering service.",
        "",
      ],
      "title": "notes",
    },
  ],
  "sectionTitle": "calculationResult.errorsWarningsNotes",
}
`;

exports[`GreaseReportDataGeneratorService prepare report result data for not autolubrciated configuration should exclude concept1 information from result 1`] = `
Object {
  "sectionTitle": "calculationResult.resultsDefault",
  "tableItems": Array [
    Object {
      "concept1": undefined,
      "isRecommended": undefined,
      "items": Array [
        Object {
          "itemTitle": "calculationResult.initialGreaseQuantity",
          "items": Array [
            "1234567.9 g/1234567.9 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer365days",
          "items": Array [
            "450617279.8 g/365 days",
            "450617279.8 mock_unit/365 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationQuantityPer1000OperatingHours",
          "items": Array [
            "51440328.7 g/hours",
            "51440328.7 mock_unit/hours",
          ],
        },
        Object {
          "itemTitle": "calculationResult.greaseServiceLife",
          "items": Array [
            "~ 51440 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer30days",
          "items": Array [
            "37037036.7 g/30 days",
            "37037036.7 mock_unit/30 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer7days",
          "items": Array [
            "8641975.2 g/7 days",
            "8641975.2 mock_unit/7 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.viscosityRatio",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.baseOilViscosityAt40",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowerTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.upperTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.additiveRequired",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.effectiveEpAdditivation",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.density",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowFriction",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.suitableForVibrations",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.supportForSeals",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.h1Registration",
          "items": Array [
            "1234567.89",
          ],
        },
      ],
      "subTitle": "Mineral oil",
      "title": "Arcanol MULTI2",
    },
    Object {
      "concept1": undefined,
      "isRecommended": undefined,
      "items": Array [
        Object {
          "itemTitle": "calculationResult.initialGreaseQuantity",
          "items": Array [
            "1234567.9 g/1234567.9 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer365days",
          "items": Array [
            "450617279.8 g/365 days",
            "450617279.8 mock_unit/365 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationQuantityPer1000OperatingHours",
          "items": Array [
            "51440328.7 g/hours",
            "51440328.7 mock_unit/hours",
          ],
        },
        Object {
          "itemTitle": "calculationResult.greaseServiceLife",
          "items": Array [
            "~ 51440 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer30days",
          "items": Array [
            "37037036.7 g/30 days",
            "37037036.7 mock_unit/30 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer7days",
          "items": Array [
            "8641975.2 g/7 days",
            "8641975.2 mock_unit/7 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.viscosityRatio",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.baseOilViscosityAt40",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowerTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.upperTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.additiveRequired",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.effectiveEpAdditivation",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.density",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowFriction",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.suitableForVibrations",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.supportForSeals",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.h1Registration",
          "items": Array [
            "1234567.89",
          ],
        },
      ],
      "subTitle": "Mineral oil",
      "title": "Arcanol MULTI2",
    },
    Object {
      "concept1": undefined,
      "isRecommended": undefined,
      "items": Array [
        Object {
          "itemTitle": "calculationResult.initialGreaseQuantity",
          "items": Array [
            "1234567.9 g/1234567.9 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer365days",
          "items": Array [
            "450617279.8 g/365 days",
            "450617279.8 mock_unit/365 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationQuantityPer1000OperatingHours",
          "items": Array [
            "51440328.7 g/hours",
            "51440328.7 mock_unit/hours",
          ],
        },
        Object {
          "itemTitle": "calculationResult.greaseServiceLife",
          "items": Array [
            "~ 51440 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer30days",
          "items": Array [
            "37037036.7 g/30 days",
            "37037036.7 mock_unit/30 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer7days",
          "items": Array [
            "8641975.2 g/7 days",
            "8641975.2 mock_unit/7 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.viscosityRatio",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.baseOilViscosityAt40",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowerTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.upperTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.additiveRequired",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.effectiveEpAdditivation",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.density",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowFriction",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.suitableForVibrations",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.supportForSeals",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.h1Registration",
          "items": Array [
            "1234567.89",
          ],
        },
      ],
      "subTitle": "Mineral oil",
      "title": "Arcanol MULTI2",
    },
  ],
}
`;

exports[`GreaseReportDataGeneratorService prepare report result data should return formatted data 1`] = `
Object {
  "sectionTitle": "calculationResult.resultsDefault",
  "tableItems": Array [
    Object {
      "concept1": Object {
        "concept125ml": Object {
          "conceptTitle": "calculationResult.concept1settings.concept1Size",
          "notes": "",
          "settingArrow": "calculationResult.concept1settings.setArrowSetting",
        },
        "concept60ml": Object {
          "conceptTitle": "calculationResult.concept1settings.concept1Size",
          "notes": "",
          "settingArrow": "calculationResult.concept1settings.setArrowSetting",
        },
        "title": "calculationResult.concept1",
      },
      "isRecommended": undefined,
      "items": Array [
        Object {
          "itemTitle": "calculationResult.initialGreaseQuantity",
          "items": Array [
            "1234567.9 g/1234567.9 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer365days",
          "items": Array [
            "450617279.8 g/365 days",
            "450617279.8 mock_unit/365 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationQuantityPer1000OperatingHours",
          "items": Array [
            "51440328.7 g/hours",
            "51440328.7 mock_unit/hours",
          ],
        },
        Object {
          "itemTitle": "calculationResult.greaseServiceLife",
          "items": Array [
            "~ 51440 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer30days",
          "items": Array [
            "37037036.7 g/30 days",
            "37037036.7 mock_unit/30 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer7days",
          "items": Array [
            "8641975.2 g/7 days",
            "8641975.2 mock_unit/7 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.viscosityRatio",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.baseOilViscosityAt40",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowerTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.upperTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.additiveRequired",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.effectiveEpAdditivation",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.density",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowFriction",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.suitableForVibrations",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.supportForSeals",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.h1Registration",
          "items": Array [
            "1234567.89",
          ],
        },
      ],
      "subTitle": "Mineral oil",
      "title": "Arcanol MULTI2",
    },
    Object {
      "concept1": Object {
        "concept125ml": Object {
          "conceptTitle": "calculationResult.concept1settings.concept1Size",
          "notes": "not supported for greasing",
          "settingArrow": "",
        },
        "concept60ml": Object {
          "conceptTitle": "calculationResult.concept1settings.concept1Size",
          "notes": "not supported for greasing",
          "settingArrow": "",
        },
        "title": "calculationResult.concept1",
      },
      "isRecommended": undefined,
      "items": Array [
        Object {
          "itemTitle": "calculationResult.initialGreaseQuantity",
          "items": Array [
            "1234567.9 g/1234567.9 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer365days",
          "items": Array [
            "450617279.8 g/365 days",
            "450617279.8 mock_unit/365 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationQuantityPer1000OperatingHours",
          "items": Array [
            "51440328.7 g/hours",
            "51440328.7 mock_unit/hours",
          ],
        },
        Object {
          "itemTitle": "calculationResult.greaseServiceLife",
          "items": Array [
            "~ 51440 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer30days",
          "items": Array [
            "37037036.7 g/30 days",
            "37037036.7 mock_unit/30 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer7days",
          "items": Array [
            "8641975.2 g/7 days",
            "8641975.2 mock_unit/7 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.viscosityRatio",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.baseOilViscosityAt40",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowerTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.upperTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.additiveRequired",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.effectiveEpAdditivation",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.density",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowFriction",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.suitableForVibrations",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.supportForSeals",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.h1Registration",
          "items": Array [
            "1234567.89",
          ],
        },
      ],
      "subTitle": "Mineral oil",
      "title": "Arcanol MULTI2",
    },
    Object {
      "concept1": undefined,
      "isRecommended": undefined,
      "items": Array [
        Object {
          "itemTitle": "calculationResult.initialGreaseQuantity",
          "items": Array [
            "1234567.9 g/1234567.9 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer365days",
          "items": Array [
            "450617279.8 g/365 days",
            "450617279.8 mock_unit/365 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationQuantityPer1000OperatingHours",
          "items": Array [
            "51440328.7 g/hours",
            "51440328.7 mock_unit/hours",
          ],
        },
        Object {
          "itemTitle": "calculationResult.greaseServiceLife",
          "items": Array [
            "~ 51440 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer30days",
          "items": Array [
            "37037036.7 g/30 days",
            "37037036.7 mock_unit/30 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.relubricationPer7days",
          "items": Array [
            "8641975.2 g/7 days",
            "8641975.2 mock_unit/7 days",
          ],
        },
        Object {
          "itemTitle": "calculationResult.viscosityRatio",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.baseOilViscosityAt40",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowerTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.upperTemperatureLimit",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.additiveRequired",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.effectiveEpAdditivation",
          "items": Array [
            "1234567.89",
          ],
        },
        Object {
          "itemTitle": "calculationResult.density",
          "items": Array [
            "1234567.89 mock_unit",
          ],
        },
        Object {
          "itemTitle": "calculationResult.lowFriction",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.suitableForVibrations",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.supportForSeals",
          "items": Array [
            "0 (suitable)",
          ],
        },
        Object {
          "itemTitle": "calculationResult.h1Registration",
          "items": Array [
            "1234567.89",
          ],
        },
      ],
      "subTitle": "Mineral oil",
      "title": "Arcanol MULTI2",
    },
  ],
}
`;
